# legal-aid

./: .gitignore  README.md  control.py  crook.py  main.py  pyproject.toml  verbose.py
src/: export.py  schemas.py  search.py  utils.py
src/cmds/: core.py  registry.py  schema.py
src/cmds/impl/: surf.py
