[tool.poetry]
name = "legal-aid"
version = "0.1.0"
description = ""
authors = ["Terry <78312274+TerryEmeigh@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.35.0"
dotenv = "^0.9.9"
regex = "^2025.9.1"
pandas = "^2.3.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
